--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,7 @@
+<!--
+ * @Date: 2020-09-22 18:41:21
+ * @information: index
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>chat_room</title>
   </head>
   <body>
     <noscript>
